fix: prevent release-download-count SHA from clipping (#9638)

--- a/source/features/release-download-count.css
+++ b/source/features/release-download-count.css
@@ -17,3 +17,9 @@
 		min-width: 5em;
 	}
 }
+
+/* Fix SHA clipping at some resolutions (#9638) */
+.rgh-release-download-count [data-rgh-heat] {
+	white-space: nowrap;
+	overflow: visible;
+}
